<resources>
    <string name="app_name">FilmApp</string>
    <string name="date">Date:</string>
    <string name="categorys">Categorys</string>
    <string name="film_cover">Film Cover</string>
    <string name="film_title">Film title</string>
    <string name="titulo">Titulo</string>
    <string name="film_categorys">Film Categorys</string>
    <string name="category">Categorías</string>
    <string name="category_title">Category: </string>
    <string name="date_title">Date:</string>
</resources>
